--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 	background-color:#f3efe4;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:15px;
-	color:#666666;
+	/*color:#666666; */
 	float:left;
 	width:100%;
 }
@@ -25,6 +25,12 @@ a {
 	outline:none;
 	color:#666666;
 }
+
+table {
+  width: 95%;
+	border-collapse: separate;
+}
+
 a img {
 	border:none;
 }
@@ -513,7 +519,7 @@ ul.search li a.searchbtn:hover{
 	float:left;
 }
 
-.glossymenu a.menuitem{	
+.glossymenu a.menuitem{
 	color: #666;
 	display: block;
 	position: relative; /*To help in the anchoring of the ".statusicon" icon image*/
@@ -539,7 +545,7 @@ ul.search li a.searchbtn:hover{
 }
 
 .glossymenu a.menuitem:hover{
-	
+
 }
 
 .glossymenu div.submenu{ /*DIV that contains each sub menu*/
@@ -551,7 +557,7 @@ ul.search li a.searchbtn:hover{
 	margin: 0;
 	padding: 0px 0px 0px 0px;
 	width:210px;
-	
+
 	margin-bottom:3px;
 }
 
@@ -633,7 +639,7 @@ ul.search li a.searchbtn:hover{
 	margin-bottom:10px;
 }
 .mycart .right{
-		
+
 }
 .mycart .left{
 	padding-top:7px;
@@ -1285,13 +1291,15 @@ ul.search li a.searchbtn:hover{
 */
 .login {
 	width:700px;
-	height:528px;
+	/* height:528px; */
 	background-image:url(../images/login.jpg);
 	background-position:top;
 	background-repeat:no-repeat;
 }
+
+
 .registrd {
-	/* width:439px; */
+	 width:80%; 
 	padding:30px 0px 30px 20px;
 	margin:30px 0px 0px 20px;
 	border:1px solid #CCC;
@@ -1328,7 +1336,7 @@ ul.search li a.searchbtn:hover{
 	padding-bottom:20px;
 }
 .newcus p{
-	padding:0px 0px 10px 0px;	
+	padding:0px 0px 10px 0px;
 }
 a.viewprods {
 	float:right;
@@ -2002,14 +2010,14 @@ h6.bar{
 	margin:3px 0px 0px 29px;
 }
 .tagssec .tag{
-	float:left;	
+	float:left;
 }
 .tagssec .tgs{
 	float:left;
 	margin:0px 0px 0px 32px;
 }
 .tagssec a{
-	float:left;	
+	float:left;
 	margin:2px 2px 0px 2px;
 }
 /*
@@ -2194,7 +2202,7 @@ a.bordrs {
 }
 /*
 =======================================================================
-	Listing Rules 
+	Listing Rules
 =======================================================================
 */
 /* Grid */
@@ -2449,7 +2457,7 @@ a.bordrs {
 	color:#e7e7e7;
 }
 .topdiv {
-	height:23px; 
+	height:23px;
 	width:960px;
 }
 a.top {
